# data-pipeline-engine

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  api_ingestion.py  basic_etl.py  kafka_streaming_pipeline.py  sample_config.yaml  streaming_pipeline.py
examples/schemas/: transaction.json
src/pipeline_engine/: __init__.py  cli.py  db.py
src/pipeline_engine/config/: __init__.py  models.py  parser.py
src/pipeline_engine/connectors/: __init__.py  base.py  csv_connector.py  json_connector.py  kafka_connector.py  postgres_connector.py  rest_connector.py  sqlite_connector.py
src/pipeline_engine/core/: __init__.py  dag.py  executor.py  scheduler.py  state.py
src/pipeline_engine/monitoring/: __init__.py  app.py  metrics.py  routes.py
src/pipeline_engine/streaming/: __init__.py  batch_window.py  consumer.py  kafka_consumer.py  kafka_producer.py  schema_registry.py  stream_processor.py
src/pipeline_engine/transforms/: __init__.py  aggregate.py  base.py  deduplicate.py  filter.py  join.py  map.py  window.py
src/pipeline_engine/validation/: __init__.py  dead_letter.py  rules.py  schema.py
tests/: conftest.py  test_cli.py  test_config.py
tests/test_connectors/: test_csv.py  test_json.py  test_rest.py  test_sqlite.py
tests/test_core/: test_dag.py  test_executor.py  test_scheduler.py
tests/test_monitoring/: test_routes.py
tests/test_streaming/: test_kafka_connector.py  test_kafka_consumer.py  test_kafka_producer.py  test_schema_registry.py  test_stream_processor.py
tests/test_transforms/: test_aggregate.py  test_filter.py  test_join.py  test_map.py  test_window.py
tests/test_validation/: test_dead_letter.py  test_schema.py
