[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline-engine"
version = "0.1.0"
description = "DAG-based data pipeline framework with batch/streaming modes, built-in connectors, data validation, and monitoring dashboard"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "George Castillo", email = "gcasti256@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.28.0"]
all = ["asyncpg>=0.28.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "httpx>=0.24.0",
    "respx>=0.20.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
pipeline = "pipeline_engine.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["aiosqlite.*", "asyncpg.*", "respx.*"]
ignore_missing_imports = true
